--- a/hw1_assignment.ipynb
+++ b/hw1_assignment.ipynb
@@ -2559,13 +2559,130 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "id": "e8270560-528c-4370-9591-00f900e2738d",
       "metadata": {
         "id": "e8270560-528c-4370-9591-00f900e2738d"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>nameFirst</th>\n",
+              "      <th>nameLast</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Joe</td>\n",
+              "      <td>Adcock</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Bob</td>\n",
+              "      <td>Addy</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Bob</td>\n",
+              "      <td>Allen</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Doug</td>\n",
+              "      <td>Allison</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Sandy</td>\n",
+              "      <td>Alomar</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>603</th>\n",
+              "      <td>Eddie</td>\n",
+              "      <td>Yost</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>604</th>\n",
+              "      <td>Ned</td>\n",
+              "      <td>Yost</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>605</th>\n",
+              "      <td>Cy</td>\n",
+              "      <td>Young</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>606</th>\n",
+              "      <td>Charles</td>\n",
+              "      <td>Zimmer</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>607</th>\n",
+              "      <td>Don</td>\n",
+              "      <td>Zimmer</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>608 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    nameFirst nameLast\n",
+              "0         Joe   Adcock\n",
+              "1         Bob     Addy\n",
+              "2         Bob    Allen\n",
+              "3        Doug  Allison\n",
+              "4       Sandy   Alomar\n",
+              "..        ...      ...\n",
+              "603     Eddie     Yost\n",
+              "604       Ned     Yost\n",
+              "605        Cy    Young\n",
+              "606   Charles   Zimmer\n",
+              "607       Don   Zimmer\n",
+              "\n",
+              "[608 rows x 2 columns]"
+            ]
+          },
+          "execution_count": 65,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "pd.read_sql('''\n",
+        "    SELECT DISTINCT People.nameFirst, People.nameLast\n",
+        "    FROM People\n",
+        "    JOIN Managers\n",
+        "      ON People.playerID = Managers.playerID\n",
+        "    WHERE People.debut IS NOT NULL\n",
+        "    ORDER BY People.nameLast ASC\n",
+        "''',db)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2618,13 +2735,147 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 75,
       "id": "c0bd7933-f94c-4100-9125-febefbb8d955",
       "metadata": {
         "id": "c0bd7933-f94c-4100-9125-febefbb8d955"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>nameFirst</th>\n",
+              "      <th>nameLast</th>\n",
+              "      <th>winloss_ratio</th>\n",
+              "      <th>total_games</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Dick</td>\n",
+              "      <td>Higham</td>\n",
+              "      <td>2.636364</td>\n",
+              "      <td>40</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Joe</td>\n",
+              "      <td>Start</td>\n",
+              "      <td>2.571429</td>\n",
+              "      <td>25</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>George</td>\n",
+              "      <td>Wright</td>\n",
+              "      <td>2.360000</td>\n",
+              "      <td>85</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Mase</td>\n",
+              "      <td>Graffen</td>\n",
+              "      <td>2.294118</td>\n",
+              "      <td>56</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Count</td>\n",
+              "      <td>Campau</td>\n",
+              "      <td>1.928571</td>\n",
+              "      <td>42</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Dick</td>\n",
+              "      <td>McBride</td>\n",
+              "      <td>1.894118</td>\n",
+              "      <td>252</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>Tim</td>\n",
+              "      <td>Bogar</td>\n",
+              "      <td>1.750000</td>\n",
+              "      <td>22</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>Dave</td>\n",
+              "      <td>Roberts</td>\n",
+              "      <td>1.713911</td>\n",
+              "      <td>1034</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>Mike</td>\n",
+              "      <td>Walsh</td>\n",
+              "      <td>1.700000</td>\n",
+              "      <td>110</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>Al</td>\n",
+              "      <td>Spalding</td>\n",
+              "      <td>1.659574</td>\n",
+              "      <td>126</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  nameFirst  nameLast  winloss_ratio  total_games\n",
+              "0      Dick    Higham       2.636364           40\n",
+              "1       Joe     Start       2.571429           25\n",
+              "2    George    Wright       2.360000           85\n",
+              "3      Mase   Graffen       2.294118           56\n",
+              "4     Count    Campau       1.928571           42\n",
+              "5      Dick   McBride       1.894118          252\n",
+              "6       Tim     Bogar       1.750000           22\n",
+              "7      Dave   Roberts       1.713911         1034\n",
+              "8      Mike     Walsh       1.700000          110\n",
+              "9        Al  Spalding       1.659574          126"
+            ]
+          },
+          "execution_count": 75,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "pd.read_sql(\"\"\"\n",
+        "    SELECT People.nameFirst,People.nameLast,\n",
+        "        (SUM(Managers.W) * 1.0) / SUM(Managers.L) AS winloss_ratio,\n",
+        "        SUM(Managers.G) AS total_games\n",
+        "    FROM Managers\n",
+        "    JOIN People\n",
+        "      ON People.playerID = Managers.playerID\n",
+        "    GROUP BY Managers.playerID\n",
+        "    HAVING SUM(Managers.G) >= 20\n",
+        "    ORDER BY winloss_ratio DESC\n",
+        "    LIMIT 10;\n",
+        "\"\"\", db)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2676,13 +2927,143 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 82,
       "id": "666c6368-d0d6-4920-9426-633041b4ebf3",
       "metadata": {
         "id": "666c6368-d0d6-4920-9426-633041b4ebf3"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>name_full</th>\n",
+              "      <th>state</th>\n",
+              "      <th>total_wins</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>University of Southern California</td>\n",
+              "      <td>CA</td>\n",
+              "      <td>1605</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>University of Texas at Austin</td>\n",
+              "      <td>TX</td>\n",
+              "      <td>1369</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>University of Oklahoma</td>\n",
+              "      <td>OK</td>\n",
+              "      <td>984</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Stanford University</td>\n",
+              "      <td>CA</td>\n",
+              "      <td>983</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>California State University Fresno</td>\n",
+              "      <td>CA</td>\n",
+              "      <td>950</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>University of Notre Dame</td>\n",
+              "      <td>IN</td>\n",
+              "      <td>829</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>University of Michigan</td>\n",
+              "      <td>MI</td>\n",
+              "      <td>812</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>University of Tennessee</td>\n",
+              "      <td>TN</td>\n",
+              "      <td>779</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>Arizona State University</td>\n",
+              "      <td>AZ</td>\n",
+              "      <td>754</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>Fresno City College</td>\n",
+              "      <td>CA</td>\n",
+              "      <td>746</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                            name_full state  total_wins\n",
+              "0   University of Southern California    CA        1605\n",
+              "1       University of Texas at Austin    TX        1369\n",
+              "2              University of Oklahoma    OK         984\n",
+              "3                 Stanford University    CA         983\n",
+              "4  California State University Fresno    CA         950\n",
+              "5            University of Notre Dame    IN         829\n",
+              "6              University of Michigan    MI         812\n",
+              "7             University of Tennessee    TN         779\n",
+              "8            Arizona State University    AZ         754\n",
+              "9                 Fresno City College    CA         746"
+            ]
+          },
+          "execution_count": 82,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "pd.read_sql(\"\"\"\n",
+        "    SELECT Schools.name_full, Schools.state,\n",
+        "        SUM(PlayerWins.career_wins) AS total_wins\n",
+        "    FROM (\n",
+        "        SELECT DISTINCT schoolID, playerID\n",
+        "        FROM CollegePlaying\n",
+        "    ) AS CollegePlayers\n",
+        "    JOIN (\n",
+        "        SELECT playerID, SUM(W) AS career_wins\n",
+        "        FROM Pitching\n",
+        "        GROUP BY playerID\n",
+        "    ) AS PlayerWins\n",
+        "      ON PlayerWins.playerID = CollegePlayers.playerID\n",
+        "    JOIN Schools\n",
+        "      ON Schools.schoolID = CollegePlayers.schoolID\n",
+        "    GROUP BY Schools.schoolID\n",
+        "    ORDER BY total_wins DESC\n",
+        "    LIMIT 10\n",
+        "\"\"\", db)"
+      ]
     },
     {
       "cell_type": "markdown",
